test/src/e2e_vm_tests/test_programs/should_pass/language/str_slice/src/main.sw
script;

fn main() -> u64 {
    let a = "abc";
    a.len()
}
