test/src/e2e_vm_tests/test_programs/should_fail/unclosed_string_literal/src/main.sw
script;

fn main() {
    let x = "a
}
